--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@auth0/angular-jwt": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "chart.js": "^3.3.2",
     "modules": "^0.4.0",
+    "net": "^1.0.2",
+    "ng2-pdf-viewer": "^7.0.1",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
